--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,5 +11,13 @@
     <nav>
         <a href="/books/new">Add a new book</a>
     </nav>
+    <br>
+    <ul>
+        <% for(let i=0; i<books.length; i++) { %>
+            <li>
+                <a href="/books/<%=i%>"> <img src="<%=books[i].img%>" alt="book cover" /> </a>
+            </li>
+        <% } %>
+    </ul>
 </body>
 </html>
