--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,21 @@
     <ul>
         <% for(let i=0; i<books.length; i++) { %>
             <li>
-                <a href="/books/<%=i%>"> <img src="<%=books[i].img%>" alt="book cover" /> </a>
+                <a href="/books/<%=i%>"> 
+                    <%= books[i].title %> 
+                    <br>
+                    <img src="<%=books[i].img%>" alt="book cover" /> 
+                    <br>
+                    <form action="/books/<%=i; %>?_method=DELETE" method="POST">
+                        <input type="submit" value="DELETE" />
+                    </form>
+                    <br>
+                    <form action="/books/<%=i; %>/edit">
+                        <input type="submit" value="Edit Book" />
+                    </form>
+                    <br>
+                    <br>
+                </a>                
             </li>
         <% } %>
     </ul>
