--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,13 @@
     <ul>
         <% for(let i=0; i<books.length; i++) { %>
             <li>
-                <a href="/books/<%=i%>"> 
-                    <%= books[i].title %> 
-                    <br>
+                <a href="/books/<%=i%>">                 
                     <img src="<%=books[i].img%>" alt="book cover" /> 
+                    <br>
+                    Title: <%= books[i].title %>
+                    <br>
+                    Author: <%= books[i].author %>
+                    <br>
                     <br>
                     <form action="/books/<%=i; %>?_method=DELETE" method="POST">
                         <input type="submit" value="DELETE" />
