Routes and controllers added for Book.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
 <body>
     <h1>Bookbook Index Page</h1>
     <nav>
-        <a href="/books/new">Add a new book</a>
+        <form action="/books/new">
+            <input type="submit" value="Add a new book!" />
+        </form>
     </nav>
     <br>
     <ul>
