--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Bookbook Book Display Page</title>
     </head>
     <body>
         <h1>Book Display Page</h1>
