Start creating some css

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Bookbook Book Display Page</title>
+        <link rel="stylesheeet" href="/css/app.css"/>
     </head>
     <body>
         <h1>Book Display Page</h1>
