--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookbook edit book page</title>
+    <link rel="stylesheeet" href="/css/app.css" />
 </head>
 <body>
     <h1>Edit Book Page</h1>
