--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookbook add a new book</title>
+    <link rel="stylesheeet" href="/css/app.css"/>
 </head>
 <body>
     <h1>Add a new book</h1>
