--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -11,12 +11,17 @@
     <h1>Login</h1>
 
     <form action="/users/login" method="POST">
-        Username: <input type="text" name="username" />
+        Username:
+        <br> 
+        <input type="text" name="username" />
         <br>
         <br>
-        Password: <input type="text" name="password" />
+        Password: 
+        <br>
+        <input type="text" name="password" />
         <br>
         <br>
+        <input type="submit" value="Login" />
     </form>
 </body>
 </html>
