--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Edit Book Page</h1>
-    <form action="/books/<%=index%>?_method=PUT" method="POST">
+    <form action="/books/<%=book.id%>?_method=PUT" method="POST">
         Title: <input type="text" name="title" value="<%=book.title%>" />
         <br>
         Author: <input type="text" name="author" value="<%=book.author%>" />
