--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <ul>
         <% for(let i=0; i<books.length; i++) { %>
             <li>
-                <a href="/books/<%=i%>">                 
+                <a href="/books/<%=books[i].id%>">                 
                     <img src="<%=books[i].img%>" alt="book cover" /> 
                     <br>
                     Title: <%= books[i].title %>
@@ -26,11 +26,11 @@
                     Author: <%= books[i].author %>
                     <br>
                     <br>
-                    <form action="/books/<%=i; %>?_method=DELETE" method="POST">
+                    <form action="/books/<%=books[i].id; %>?_method=DELETE" method="POST">
                         <input type="submit" value="DELETE" />
                     </form>
                     <br>
-                    <form action="/books/<%=i; %>/edit">
+                    <form action="/books/<%=books[i].id; %>/edit">
                         <input type="submit" value="Edit Book" />
                     </form>
                     <br>
