Fixed some display for users

--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -19,6 +19,7 @@
         <br/>
         Password: <input type="text" name="password" />
         <br/>
+        Profile Picture: <input type="url" name="pic" />
         <br>
         <input type="submit" name="" value="Sign Up"/>
     </form>
