--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -10,7 +10,7 @@
 <body>
     <h1> Hi <%= user.name %> Welcome back to <span class="app-name">Bookbook-App</span>!</h1>
 
-    <form action="/users/profile/<%=index%>?_method=PUT" method="POST">
+    <form action="/users/profile/<%=user.id%>?_method=PUT" method="POST">
         Name: <input type="text" name="name" value=<%=user.name%> />
         <br> 
         <br>
@@ -20,12 +20,13 @@
         Password: <input type="text" name="password" value=<%=user.password%> />
         <br> 
         <br> 
+        <img src="<%= user.pic %> " alt="profile picture" />
+        <br> 
         <br>
-           
         <input type="submit" value="Edit Profile" />
     </form>
     <br>
-    <form action="/users/<%=index%>?_method=DELETE" method="POST">
+    <form action="/users/<%=user.id%>?_method=DELETE" method="POST">
         <input type="submit" value="Delete User" />
     </form>
     <br>
@@ -35,6 +36,7 @@
     </form>
     <br>
     or:
+    <br>
     <br>
     <form action="/books/new">
         <input type="submit" value="Add a new book!" />
